css and general layout updates
